--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "next": "14.2.3",
+    "next-plugin-svgr": "^1.1.10",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.76.0"
